--- a/README.Rmd
+++ b/README.Rmd
@@ -185,7 +185,7 @@ Learning how to use these functions will make question asking and answering much
 easier. Reproducible examples are key to getting your questions answered fast, therefore
 it is worth to learn how to produce them from the very beginning.
 
-### Include a minimal dataset with `dput`
+### 4.1 Include a minimal dataset with `dput`
 
 The easiest way to share your data is by using the dput command. 
 
@@ -215,7 +215,7 @@ mtcars[1:5, 1:2]
 dput(mtcars[1:5, 1:2])
 ```
 
-### Include an example with runnable code using the `reprex` package
+### 4.2 Include an example with runnable code using the `reprex` package
 
 
 The reprex package helps you turn your code into **{repr}**oducible **{ex}**amples.
@@ -355,16 +355,16 @@ two arrows on the right.
 If you click on the HTML button, a window opens, where your post is shown in html format.
 Your can just past your reproducible example in there after inserting a new line.
 
-#### The other way around with `reprex_clean()`
+### The other way around with `reprex_clean()`
 
 If you copy a code example e.g. from Stack Overflow and paste it into your R session to run it, 
 you can use `reprex` to turn the example into runnable code without the output. 
 Just copy the code (including comments of the answer) to the clipboard and run 
 `reprex_clean()`. Now you can paste the clean code into your R-Script.
 
-#### Other ways to produce a reprex
+### Other ways to produce a reprex
 
-**Use the Addin**
+**1. Use the Addin**
 
 If you installed the reprex package, have a look at your RStudio Addins. There, you will find
 a section for `reprex` with two option: `Reprex selection` and `Render reprex`:
@@ -378,7 +378,7 @@ This will render a reprex from your highlighted code.
 You can also highlight code and then use the Addin `Render reprex` which lets you 
 specify source of the reprex, target venue etc instead of using the default values.
 
-<a name="shortcut"></a>**Use a keyboard shortcut**
+<a name="shortcut"></a>**2. Use a keyboard shortcut**
 
 You can also bind the two functions `Reprex selection` and `Render reprex` to a 
 keyboard shortcut of your choice. Then you neither have to click any button nor 
@@ -386,7 +386,7 @@ call a function to create a reprex. You can do that by going to `Tools -> Modify
 Then filter the list with `reprex` and you can assign a keyboard shortcut of your 
 choice (of course it has to be a shortcut unused by other functions).
 
-**Add `reprex` to your `.Rprofile`**
+**3. Add `reprex` to your `.Rprofile`**
 
 If you use the reprex package often, and you don't want to load it into your R session
 every time, adding reprex to your R profile. 
@@ -464,7 +464,7 @@ reprex(venue = "r", show = FALSE, si = TRUE, style = TRUE)
 Now the reprex on your clipboard will be styled according to the tidyverse
 style guide.
 
-## Further ressources
+# Further ressources
 
 - more on how to make great reproducible examples in R [here](https://stackoverflow.com/questions/5963269/how-to-make-a-great-r-reproducible-example)
 - great intro to the `reprex` package by Jenny Bryan in [this video](video](https://community.rstudio.com/t/video-reproducible-examples-and-the-reprex-package/14732)
@@ -472,7 +472,7 @@ style guide.
 - What they forgot to teach you about R, [book](https://rstats.wtf/) by Jenny Bryan and
 Jim Hester
 
-### Good adresses for help and inspiration
+## Good adresses for help and inspiration
 
 - [Stack Overflow](https://stackoverflow.com): Probably the most famous forum for questions
 - [RBloggers](https://www.r-bloggers.com/): Many tutorials
